# myProject

./: CMakeLists.txt  CMakeLists.txt~  README.md  TabWidget.cpp  TabWidget.h  mygihub.txt  ssh.txt
ConfigParaView/: README.txt  branded_paraview_initializer.cxx.in  branded_paraview_initializer.h.in
Editor/: CmakeLists.txt  TabWidget.cpp
Tools/ToolTips/: CMakeLists.txt  ToolTipsForCode.cpp
Tools/yplus/: CmakeLists.txt  calculator.cpp  calculator.h  calculator.ui  main.cpp
Tutorial/: 用户手册.docx
libs/: qscintilla2_qt5d.lib
source/: CFDbeta.cpp  CFDbeta.cpp~  CFDbeta.h  CFDbeta.h~  CFDbeta.ui  CMakeLists.txt  QVTKView.cpp  QVTKView.h  TabWidget.h  images.qrc  images.qrc~  main.cpp
source/CFDMainWindow/: FileOpen.cpp  FileOpen.h  MeshFuction.cpp  MeshFunction.h  QVTKView.cpp  QVTKView.h  dir.h
source/CFDMainWindow/initwindow/: configuration.cpp  configuration.h  configuration.ui  initConsole.cpp  initMainWindowAction.cpp  initwindow.cpp  initwindow.h  stringToChange.cpp
source/Core/: CFDbeta.ui  RunCommand.cpp  RunCommand.h  mytoolbar.cpp  mytoolbar.h  myui.cpp  myui.cpp~  myui.h  myui.h~  myui.ui  qmenubutton.cpp  qmenubutton.h
source/Demo1/: CMakeLists.txt  DemoApp1.cxx
source/Editor/: Editor.cpp  Editor.h  EditorAction.cpp  EditorAction.cpp~  EditorAction.h  EditorAction.h~  codeedit.cpp  codeeditor.h  config.cpp  config.h  gotolinedialog.cpp  gotolinedialog.cpp~  gotolinedialog.h  notepad.cpp  notepad.h  perferencedialog.cpp  perferencedialog.h  textview.ui
source/Editor/codeTips/: probes.txt
source/Mesh/: BlockMesh.cpp  BlockMesh.h  BlockMesh.ui
source/OutputMessage/: CMakeLIsts.txt  OutputMessage.cpp  OutputMessage.cpp~  OutputMessage.h  OutputMessage.h~
source/Resource/512_512/: clear.png.zrisfpz.partial
source/ToolBar/: mainToolBar.cpp  mainToolBar.cpp~  mainToolBar.h  mainToolBar.h~
